crates/pg_syntax/tests/snapshots/postgres_regress/float8@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select ceiling(f1) as ceiling_f1 from float8_tbl f;
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..17
      Ident@7..14 "ceiling"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "f1"
    Ascii41@17..18 ")"
    Whitespace@18..19 " "
    As@19..21 "as"
    Whitespace@21..22 " "
    Ident@22..32 "ceiling_f1"
  Whitespace@32..33 " "
  From@33..37 "from"
  Whitespace@37..38 " "
  RangeVar@38..50
    Ident@38..48 "float8_tbl"
    Whitespace@48..49 " "
    Alias@49..50
      Ident@49..50 "f"
  Ascii59@50..51 ";"

