crates/pg_syntax/tests/snapshots/postgres_regress/float8@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-10e400'::float8;"
---
SelectStmt@0..25
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    TypeCast@7..24
      AConst@7..16
        Sconst@7..16 "'-10e400'"
      Typecast@16..18 "::"
      TypeName@18..24
        Ident@18..24 "float8"
  Ascii59@24..25 ";"

