crates/pg_syntax/tests/snapshots/postgres_regress/float8@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f.f1 ^ '1e200' from FLOAT8_TBL f;"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    AExpr@7..21
      ColumnRef@7..11
        Ident@7..8 "f"
        Ascii46@8..9 "."
        Ident@9..11 "f1"
      Whitespace@11..12 " "
      Ascii94@12..13 "^"
      Whitespace@13..14 " "
      AConst@14..21
        Sconst@14..21 "'1e200'"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  RangeVar@27..39
    Ident@27..37 "FLOAT8_TBL"
    Whitespace@37..38 " "
    Alias@38..39
      Ident@38..39 "f"
  Ascii59@39..40 ";"

