crates/pg_syntax/tests/snapshots/postgres_regress/float8@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 0 ^ 0 + 0 ^ 1 + 0 ^ 0.0 + 0 ^ 0.5;
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..40
      AExpr@7..30
        AExpr@7..20
          AExpr@7..12
            AConst@7..8
              Iconst@7..8 "0"
            Whitespace@8..9 " "
            Ascii94@9..10 "^"
            Whitespace@10..11 " "
            AConst@11..12
              Iconst@11..12 "0"
          Whitespace@12..13 " "
          Ascii43@13..14 "+"
          Whitespace@14..15 " "
          AExpr@15..20
            AConst@15..16
              Iconst@15..16 "0"
            Whitespace@16..17 " "
            Ascii94@17..18 "^"
            Whitespace@18..19 " "
            AConst@19..20
              Iconst@19..20 "1"
        Whitespace@20..21 " "
        Ascii43@21..22 "+"
        Whitespace@22..23 " "
        AExpr@23..30
          AConst@23..24
            Iconst@23..24 "0"
          Whitespace@24..25 " "
          Ascii94@25..26 "^"
          Whitespace@26..27 " "
          AConst@27..30
            Fconst@27..30 "0.0"
      Whitespace@30..31 " "
      Ascii43@31..32 "+"
      Whitespace@32..33 " "
      AExpr@33..40
        AConst@33..34
          Iconst@33..34 "0"
        Whitespace@34..35 " "
        Ascii94@35..36 "^"
        Whitespace@36..37 " "
        AConst@37..40
          Fconst@37..40 "0.5"
  Ascii59@40..41 ";"

