crates/pg_syntax/tests/snapshots/postgres_regress/geometry@119.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c1.f1 AS circle, p1.f1 AS point, (p1.f1 <-> c1.f1) AS distance\n   FROM CIRCLE_TBL c1, POINT_TBL p1\n   WHERE (p1.f1 <-> c1.f1) > 0\n   ORDER BY distance, area(c1.f1), p1.f1[0];"
---
SelectStmt@0..181
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    ColumnRef@7..12
      Ident@7..9 "c1"
      Ascii46@9..10 "."
      Ident@10..12 "f1"
    Whitespace@12..13 " "
    As@13..15 "AS"
    Whitespace@15..16 " "
    Ident@16..22 "circle"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..38
    ColumnRef@24..29
      Ident@24..26 "p1"
      Ascii46@26..27 "."
      Ident@27..29 "f1"
    Whitespace@29..30 " "
    As@30..32 "AS"
    Whitespace@32..33 " "
    Ident@33..38 "point"
  Ascii44@38..39 ","
  Whitespace@39..40 " "
  ResTarget@40..69
    Ascii40@40..41 "("
    AExpr@41..56
      ColumnRef@41..46
        Ident@41..43 "p1"
        Ascii46@43..44 "."
        Ident@44..46 "f1"
      Whitespace@46..47 " "
      Op@47..50 "<->"
      Whitespace@50..51 " "
      ColumnRef@51..56
        Ident@51..53 "c1"
        Ascii46@53..54 "."
        Ident@54..56 "f1"
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    As@58..60 "AS"
    Whitespace@60..61 " "
    Ident@61..69 "distance"
  Newline@69..70 "\n"
  Whitespace@70..73 "   "
  From@73..77 "FROM"
  Whitespace@77..78 " "
  RangeVar@78..91
    Ident@78..88 "CIRCLE_TBL"
    Whitespace@88..89 " "
    Alias@89..91
      Ident@89..91 "c1"
  Ascii44@91..92 ","
  Whitespace@92..93 " "
  RangeVar@93..105
    Ident@93..102 "POINT_TBL"
    Whitespace@102..103 " "
    Alias@103..105
      Ident@103..105 "p1"
  Newline@105..106 "\n"
  Whitespace@106..109 "   "
  Where@109..114 "WHERE"
  Whitespace@114..115 " "
  Ascii40@115..116 "("
  AExpr@116..136
    AExpr@116..131
      ColumnRef@116..121
        Ident@116..118 "p1"
        Ascii46@118..119 "."
        Ident@119..121 "f1"
      Whitespace@121..122 " "
      Op@122..125 "<->"
      Whitespace@125..126 " "
      ColumnRef@126..131
        Ident@126..128 "c1"
        Ascii46@128..129 "."
        Ident@129..131 "f1"
    Ascii41@131..132 ")"
    Whitespace@132..133 " "
    Ascii62@133..134 ">"
    Whitespace@134..135 " "
    AConst@135..136
      Iconst@135..136 "0"
  Newline@136..137 "\n"
  Whitespace@137..140 "   "
  SortBy@140..157
    Order@140..145 "ORDER"
    Whitespace@145..146 " "
    By@146..148 "BY"
    Whitespace@148..149 " "
    ColumnRef@149..157
      Ident@149..157 "distance"
  Ascii44@157..158 ","
  Whitespace@158..159 " "
  SortBy@159..169
    FuncCall@159..169
      Ident@159..163 "area"
      Ascii40@163..164 "("
      ColumnRef@164..169
        Ident@164..166 "c1"
        Ascii46@166..167 "."
        Ident@167..169 "f1"
  Ascii41@169..170 ")"
  Ascii44@170..171 ","
  Whitespace@171..172 " "
  SortBy@172..179
    AIndirection@172..179
      ColumnRef@172..177
        Ident@172..174 "p1"
        Ascii46@174..175 "."
        Ident@175..177 "f1"
      Ascii91@177..178 "["
      AIndices@178..179
        AConst@178..179
          Iconst@178..179 "0"
  Ascii93@179..180 "]"
  Ascii59@180..181 ";"

