crates/pg_syntax/tests/snapshots/postgres_regress/geometry@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM polygon_tbl WHERE f1 @> '((1,1),(2,2),(2,1))'::polygon\n    ORDER BY (poly_center(f1))[0];"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..25
    Ident@14..25 "polygon_tbl"
  Whitespace@25..26 " "
  Where@26..31 "WHERE"
  Whitespace@31..32 " "
  AExpr@32..68
    ColumnRef@32..34
      Ident@32..34 "f1"
    Whitespace@34..35 " "
    Op@35..37 "@>"
    Whitespace@37..38 " "
    TypeCast@38..68
      AConst@38..59
        Sconst@38..59 "'((1,1),(2,2),(2,1))'"
      Typecast@59..61 "::"
      TypeName@61..68
        Ident@61..68 "polygon"
  Newline@68..69 "\n"
  Whitespace@69..73 "    "
  SortBy@73..101
    Order@73..78 "ORDER"
    Whitespace@78..79 " "
    By@79..81 "BY"
    Whitespace@81..82 " "
    Ascii40@82..83 "("
    AIndirection@83..101
      FuncCall@83..97
        Ident@83..94 "poly_center"
        Ascii40@94..95 "("
        ColumnRef@95..97
          Ident@95..97 "f1"
      Ascii41@97..98 ")"
      Ascii41@98..99 ")"
      Ascii91@99..100 "["
      AIndices@100..101
        AConst@100..101
          Iconst@100..101 "0"
  Ascii93@101..102 "]"
  Ascii59@102..103 ";"

