crates/pg_syntax/tests/snapshots/postgres_regress/geometry@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT point(f1) AS center\n   FROM CIRCLE_TBL;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..26
    FuncCall@7..15
      Ident@7..12 "point"
      Ascii40@12..13 "("
      ColumnRef@13..15
        Ident@13..15 "f1"
    Ascii41@15..16 ")"
    Whitespace@16..17 " "
    As@17..19 "AS"
    Whitespace@19..20 " "
    Ident@20..26 "center"
  Newline@26..27 "\n"
  Whitespace@27..30 "   "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..45
    Ident@35..45 "CIRCLE_TBL"
  Ascii59@45..46 ";"

